[upd] uploadFile method

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,8 @@ REFRESH_EXPIRE=30d
 PASS_SALT_ROUNDS=10
 
 #STORAGE
-PATH="./src/storage"
-DEFAULT_AVATAR="./src/storage/default.png"
+STORAGE_PATH="storage"
+DEFAULT_AVATAR="storage/default.png"
 FILENAME_LENGTH=10
 MAX_SIZE=
 
