--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.17",
-    "uid": "^2.0.2"
+    "uid": "^2.0.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -45,6 +46,7 @@
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.11",
     "@types/node": "18.15.11",
+    "@types/pg": "^8.10.9"
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
