[fix] post types

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,11 @@ SMTP_PORT=465
 SMTP_SECURE=true
 SMTP_EMAIL=
 SMTP_PASS=
+
+#ADMIN
+NAME="Admin"
+SURNAME="User"
+CITY="EKB"
+EMAIL="shakmate@mail.ru"
+PASSWORD="12345"
+
